Renombrar y actualizar propiedades en DTOs y componentes para mejorar la claridad y consistencia del código, incluyendo cambios en nombres de campos y tipos de datos.